--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/timegrid": "^6.1.9",
+    "angular-font-awesome": "^3.1.2",
     "chart.js": "^4.4.0",
     "d3": "^7.8.5",
     "font-awesome": "^4.7.0",
